<resources>

    <string name="app_name">پابوس‌یار</string>
    <string name="scan_message">کد مسافر را اسکن کنید.</string>
    <string name="has_food">غذای مسافر دریافت شد.</string>
    <string name="has_no_food">غذایی توسط مسافر سفارش داده نشده است.</string>
    <string name="rescan">دوباره اسکن کن</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_qrcode">بارکد داده شده معتبر نیست</string>
    <string name="welcome_to_shah">آمدم ای شاه، پناهم بده</string>
    <string name="paboos98">پابوس ۱۳۹۸</string>
    <string name="username">نام‌کاربری</string>
    <string name="sign_in">ورود</string>
    <string name="password">رمز</string>
    <string name="connection_error">خطا در ارتباط با سرور</string>
    <string name="welcome_khadem">خادم عزیز، خوش آمدید.</string>
    <string name="food">غذا</string>
    <string name="cultural">فرهنگی</string>
    <string name="recreational">تفریحی</string>
    <string name="train">قطار</string>
    <string name="blanket">پتو</string>
    <string name="entity">بررسی ثبت نام</string>
    <string name="blue_waves_pool">استخر موج‌های آبی</string>
    <string name="futsal">فوتسال</string>
    <string name="bowling">بولینگ</string>
    <string name="paintball">پینت‌بال</string>
    <string name="martyr_view">دیدار با خانواده شهدا</string>
    <string name="rest_home_view_janbaz">بازدید آسایشگاه جانبازان امام خمنینی</string>
    <string name="rest_home_malool_view">بازدید از آسایشگاه معلولین فیاض‌بخش</string>
    <string name="sample">نمونه</string>
    <string name="sadat">حسینیه سادات رضوی</string>
    <string name="shohada">حسینیه سیدالشهدا</string>
    <string name="logout">خروج</string>
    <string name="payment">پرداخت</string>
    <string name="refreshing">در حال بروزرسانی…</string>
    <string name="back">بازگشت</string>
    <string name="pack">پک</string>
    <string name="incorrect_pass">لطفا رمزعبور و نام‌کاربری را به درستی وارد نمایید.</string>
    <string name="no_internet_connection">شما به شبکه اینترنت متصل نیستید.</string>
    <string name="please_connect_internet">برای استفاده از این برنامه نیاز به اتصال به شبکه اینترنت را دارید. لطفا در تنظیمات به اینترنت متصل شوید.</string>
    <string name="internet_connection_error">خطا در اتصال</string>
    <string name="settings">تنظیمات</string>
    <string name="dismiss">بیخیال</string>
    <string name="father_name">نام پدر:</string>
    <string name="phone_number">شماره تماس:</string>
    <string name="train_no">شماره قطار:</string>
    <string name="wagon_no">شماره واگن:</string>
    <string name="coupe_no">شماره کوپه:</string>
    <string name="stat">آمار</string>
    <string name="ok">باشه</string>
    <string name="requests">درخواست‌ها</string>
    <string name="azzahraa_logo">لوگوی هیئت الزهرا</string>
    <string name="just_admin_entrance">لطفا با حساب ادمین وارد شوید!\n(برای پیدا دریافت حساب ادمین به مسئول ثبت نام مرجع کنید.)</string>
    <string name="book">بن کتاب</string>
    <string name="aleyk_salam">علیک سلام</string>
    <string name="offline_mode">حالت آفلاین</string>
    <string name="fetch_info_failure">خطا در دریافت اطلاعات</string>
    <string name="scan_qr_code">شروع اسکن بارکد</string>

    <string-array name="actions">
        <item>غذا</item>
        <item>فرهنگی</item>
        <item>تفریحی</item>
        <item>قطار</item>
        <item>پتو</item>
        <item>تشخیص هویت</item>
    </string-array>
</resources>
