<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_main_logo_img"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/side_padding"
            android:paddingRight="@dimen/side_padding">


            <Button
                android:id="@+id/activity_main_food_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:onClick="showFood"
                android:text="@string/food"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/activity_main_cultural_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_background"
                android:onClick="showCultural"
                android:text="@string/cultural"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/activity_main_recreational_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_background"
                android:onClick="showRecreational"
                android:text="@string/recreational"
                android:textSize="@dimen/default_text_size" />


            <Button
                android:id="@+id/activity_main_book_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_background"
                android:onClick="showBook"
                android:text="@string/book"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/activity_main_blanket_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_background"
                android:onClick="showBlanket"
                android:text="@string/blanket"
                android:textSize="@dimen/default_text_size" />


            <Button
                android:id="@+id/activity_main_entity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/button_background"
                android:onClick="showEntity"
                android:text="@string/entity"
                android:textSize="@dimen/default_text_size" />


            <Button
                android:id="@+id/activity_main_logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:background="@drawable/logout_background_button"
                android:onClick="logout"
                android:text="@string/logout"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/activity_main_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/aleyk_salam"
        android:src="@drawable/paboos_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>