<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/paboos_blue"
    android:padding="50dp"
    android:orientation="vertical"
    android:gravity="center">

        <ImageView
            android:id="@+id/azzahraa_logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/azzahraa_logo" />
        
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_login_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textDirection="rtl"
            android:backgroundTint="@color/khaki"/>

        <EditText
            android:id="@+id/activity_login_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_username_et"
            android:textDirection="rtl"
            android:backgroundTint="@color/khaki"/>

        <Button
            android:id="@+id/activity_login_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_password_tv"
            android:layout_marginTop="20dp"
            android:background="@color/khaki"
            android:onClick="signIn"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"/>

</LinearLayout>