<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".PaymentActivity">

    <ImageView
        android:id="@+id/activity_cultural_amade_am_img"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/aleyk_salam"
        android:src="@drawable/amade_am"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/side_padding"
        android:paddingRight="@dimen/side_padding"
        app:layout_constraintTop_toBottomOf="@id/activity_cultural_amade_am_img"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp">


        <EditText
            android:id="@+id/activity_payment_amount_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginBottom="30dp"
            android:inputType="number" />


        <Button
            android:id="@+id/activity_payment_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:onClick="showPaymentView"
            android:text="@string/payment"
            android:textSize="@dimen/default_text_size" />


        <Button
            android:id="@+id/activity_food_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/logout_background_button"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
